--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             align-items: center;
             height: 90vh;
             background: url('pngegg.png') no-repeat center center;
-            background-size: background-size: 150%;
+            background-size: 65%;
             color: white;
             text-shadow: 2px 2px 4px #000;
         }
