--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="https://leods4.github.io/W1_Cur_Pes/">Contato</a>
+        <a href="https://leods4.github.io/W1_Cur_Av3/">Contato</a>
         <a href="sobre.html">Sobre</a>
     </nav>
 
